manifest/objects/ALTF__Sales_Process_Mapping__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the mapping of Opportunity Types to the Playbook Sales Processes. The mapping can be accessed from the Playbook Admin application.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Record_Type__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process__c</fullName>
        <label>Sales Process</label>
        <referenceTo>ALTF__Sales_Process__c</referenceTo>
        <relationshipName>DM_Sales_Process_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Sales Process Mapping</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Process Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Sales Process Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>